--- a/prebuild/index.html
+++ b/prebuild/index.html
@@ -4,7 +4,7 @@
 	<title>Trimpa</title> 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1"> 
-	<style>*{padding:0;margin:0;border:0}*,:after,:before{-webkit-box-sizing:border-box;box-sizing:border-box}:active,:focus{outline:0}header{display:block}body,html{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-family:"Nunito Sans",Aria,sans-sarif;font-weight:400;font-style:normal;font-size:18px}button,input{font-family:inherit}input::-ms-clear{display:none}button::-moz-focus-inner{padding:0;border:0}a,a:visited{text-decoration:none}ul li{list-style:none}img{max-width:100%}h1,h3{font-size:inherit}.wrapper{overflow:hidden}header{padding:23.5px 0 23.5px 0}header .container{max-width:1430px;padding:0 10px;margin:0 auto;display:flex;justify-content:space-between;align-items:center}header .container .navigation{display:flex;justify-content:space-between}header .container .navigation__item{margin-left:16px}header .container .navigation__item a{padding:13px 20px;color:#7c8db0;border-radius:4px;display:block}.main{background:url(img/Hero.png) 50%/cover no-repeat;padding:93.5px 10px 245.5px 10px;margin:0 auto;max-width:1440px}.main .container{max-width:1203px;padding:0 10px;margin:0 auto}.main .container .title-90{margin:0 auto;max-width:756px}.search{border-radius:4px 0 4px 4px;border:solid rgba(140,155,186,.5);border-width:1px 0 1px 1px;margin-top:48px;-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16)}.search__field{border:1px solid rgba(140,155,186,.5);padding:11.5px 0 11.5px 69px;font-family:"Nunito Sans";font-weight:400;font-style:normal;font-size:18px;color:#7c8db0;border:solid rgba(140,155,186,.5);border-width:0 .5px 0 .5px;border-radius:0}.search .from{background:#fff url(img/plane-up.svg) 8% 50% no-repeat;position:relative;width:324px}.search .to{background:#fff url(img/plane-down.svg) 8% 50% no-repeat;width:324px}.search .date{background:#fff url(img/calendar.svg) 8% 50% no-repeat;width:252px}.search .person{background:#fff url(img/person.svg) 8% 50% no-repeat;width:200px}.search__btn{background-color:#605dec;padding:11.5px 13px;font-size:18px;color:#fafafa}.where-block{position:absolute;margin-left:24px;width:300px;height:312px;background-color:#fff;border:.5px solid rgba(140,155,186,.5);border-radius:8px;-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);overflow-y:scroll;display:none}.where-block__item{margin:14.5px 15.5px 7px 16px;background-color:#605dec;padding:5px 0 5px 10px;border-radius:4px;color:#fafafa;font-size:16px}.to-block{position:absolute;margin-left:348px;width:300px;height:312px;background-color:#fff;border:.5px solid rgba(140,155,186,.5);border-radius:8px;-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);overflow-y:scroll;display:none}.to-block__item{margin:14.5px 15.5px 7px 16px;background-color:#605dec;padding:5px 0 5px 10px;border-radius:4px;color:#fafafa;font-size:16px}.find{padding:40px 0}.find .container{max-width:1312px;padding:0 10px;margin:0 auto}.title{padding-bottom:24px;font-size:24px;font-weight:700;display:flex;justify-content:space-between}.title__24{color:#6e7491}.title__24--violet{color:#605dec}.title__arr{font-weight:400;margin-right:33px;color:#a1b0cc;position:relative;display:block}.title__arr:after{content:"";background:url(img/arr-right.svg) no-repeat;top:3px;margin-left:10px;width:23px;height:17px;position:absolute}.place{display:flex;justify-content:space-between;padding-bottom:40px}.place__item{max-width:410px;-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);border-radius:12px}.place__item--img{border-radius:12px 12px 0 0}.place__item--title-18{color:#6e7491;font-size:18px;font-weight:700;padding:16px 24px 4px 16px;display:flex;justify-content:space-between}.place__item--title-18 .city{color:#605dec}.place__item--title-18 .price{margin-left:50px}.place__item--title-16{color:#6e7491;padding:0 24px 16px 16px}.place-main{-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);border-radius:12px 12px 12px 12px}.place-main__img{border-radius:12px 12px 0 0}.place-main__title-18{display:flex;justify-content:space-between;padding:16px 24px 4px 24px;color:#6e7491;font-size:18px;font-weight:700}.place-main__title-18--text .city{color:#605dec}.place-main__title-16{color:#6e7491;font-size:16px;padding:0 24px 16px 24px}.place{padding:40px 0}</style>
+	<style>*{padding:0;margin:0;border:0}*,:after,:before{-webkit-box-sizing:border-box;box-sizing:border-box}:active,:focus{outline:0}header{display:block}body,html{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-family:"Nunito Sans",Aria,sans-sarif;font-weight:400;font-style:normal;font-size:18px}button,input{font-family:inherit}input::-ms-clear{display:none}button::-moz-focus-inner{padding:0;border:0}a,a:visited{text-decoration:none}ul li{list-style:none}img{max-width:100%}h1,h3{font-size:inherit}.wrapper{overflow:hidden}header{padding:23.5px 0 23.5px 0}header .container{max-width:1430px;padding:0 10px;margin:0 auto;display:flex;justify-content:space-between;align-items:center}header .container .navigation{display:flex;justify-content:space-between}header .container .navigation__item{margin-left:16px}header .container .navigation__item a{padding:13px 20px;color:#7c8db0;border-radius:4px;display:block}.main{background:url(img/Hero.png) 50%/cover no-repeat;padding:93.5px 10px 245.5px 10px;margin:0 auto;max-width:1440px}.main .container{max-width:1203px;padding:0 10px;margin:0 auto}.main .container .title-90{margin:0 auto;max-width:756px}.search{border-radius:4px 4px 4px 4px;border:solid rgba(140,155,186,.5);border-width:1px 1px 1px 1px;margin-top:48px;-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);display:flex;justify-content:space-between;align-items:center}.find{padding:40px 0}.find .container{max-width:1312px;padding:0 10px;margin:0 auto}.title{padding-bottom:24px;font-size:24px;font-weight:700;display:flex;justify-content:space-between}.title__24{color:#6e7491}.title__24--violet{color:#605dec}.title__arr{font-weight:400;margin-right:33px;color:#a1b0cc;position:relative;display:block}.title__arr:after{content:"";background:url(img/arr-right.svg) no-repeat;top:3px;margin-left:10px;width:23px;height:17px;position:absolute}.place{display:flex;justify-content:space-between;padding-bottom:40px}.place__item{max-width:410px;-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);border-radius:12px}.place__item--img{border-radius:12px 12px 0 0}.place__item--title-18{color:#6e7491;font-size:18px;font-weight:700;padding:16px 24px 4px 16px;display:flex;justify-content:space-between}.place__item--title-18 .city{color:#605dec}.place__item--title-18 .price{margin-left:50px}.place__item--title-16{color:#6e7491;padding:0 24px 16px 16px}.place-main{-webkit-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);-moz-box-shadow:0 5px 10px 2px rgba(34,60,80,.16);box-shadow:0 5px 10px 2px rgba(34,60,80,.16);border-radius:12px 12px 12px 12px}.place-main__img{border-radius:12px 12px 0 0}.place-main__title-18{display:flex;justify-content:space-between;padding:16px 24px 4px 24px;color:#6e7491;font-size:18px;font-weight:700}.place-main__title-18--text .city{color:#605dec}.place-main__title-16{color:#6e7491;font-size:16px;padding:0 24px 16px 24px}.place{padding:40px 0}</style>
 	<link rel="stylesheet" type="text/css" href="styles/main.css" media="print" onload="this.media='all'">
 	
 	<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
@@ -45,30 +45,45 @@
 	<div class="main">
 		<div class="container">
 			<h1 class = "title-90"><img src="img/h1-text.png" alt=""></h1>                                            <!--PICTURE-->
-			<div class="search">
-				<input id="from" class="from search__field" type="text" value ="From where?"><input id="to" class="to search__field" type="text" value ="Where to?"><input class="date search__field" type="text" value ="Depart - Return"><input class="person search__field" type="text" value ="1 adult"><button class="search__btn">Search</button>
-				<ul id="where-block" class=" where-block">
-					<li class="where-block__item">SFO</li>
-					<li class="where-block__item">ATL</li>
-					<li class="where-block__item">LAX</li>
-					<li class="where-block__item">STL</li>
-					<li class="where-block__item">PVG</li>
-					<li class="where-block__item">MSP</li>
-					<li class="where-block__item">NRT</li>
-					<li class="where-block__item">JFK</li>
-				</ul>
+			<div class="search" id="search">
 
 
-				<ul id="to-block" class=" to-block">
-					<li class="to-block__item">SFO</li>
-					<li class="to-block__item">ATL</li>
-					<li class="to-block__item">LAX</li>
-					<li class="to-block__item">STL</li>
-					<li class="to-block__item">PVG</li>
-					<li class="to-block__item">MSP</li>
-					<li class="to-block__item">NRT</li>
-					<li class="to-block__item">JFK</li>
-				</ul>
+				<div class="search__block">
+					<input list="from" class="search__block" value="From where?">
+					<datalist id="from">
+						
+					</datalist>
+						<!-- <option value="SFO"> 
+						<option value="ATL"> 
+						<option value="LAX"> 
+						<option value="STL"> 
+						<option value="PVG"> 
+						<option value="MSP"> 
+						<option value="NRT"> 
+						<option value="JFK"> -->
+				</div>
+				<div class="search__block">
+					<input list="to" class="search__from" value="Where to?">
+					<datalist id="to">
+						<option value="SFO"> 
+						<!-- <option value="ATL"> 
+						<option value="LAX"> 
+						<option value="STL"> 
+						<option value="PVG"> 
+						<option value="MSP"> 
+						<option value="NRT"> 
+						<option value="JFK"> -->
+					</datalist>
+				</div>
+				<div class="search__block">
+					<input type="date">
+				</div>
+				<div class="search__block">
+					<input type="text" value="1 adult">
+				</div>
+				<div class="search__block">
+					<button>Search</button>
+				</div>
 			</div>
 		</div>
 	</div>
